--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/material": "^5.15.20",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "outlet": "^0.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.24.0",
