fix: update select fields

--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@mui/material": "^5.15.20",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
+    "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "lucide-react": "^0.407.0",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.407.0",
     "outlet": "^0.1.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
