--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
+    "utms-client": "file:",
     "zod": "^3.23.8"
   },
   "devDependencies": {
